update test methods remove useless commands